deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ores-gh-bots
  labels:
    app.kubernetes.io/name: ores-gh-bots
