deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ores-gh-bots
  namespace: ores-gh-bots
spec:
  selector:
    app.kubernetes.io/name: ores-gh-bots
  ports:
    - name: http
      port: 80
      targetPort: http
